# side-project

./: LICENSE  README.md
clock/: clock.py
filtered_app/: app.py
hangman/: diff.txt  easy.txt  hangman.py  med.txt  xdiff.txt
hash_cracker/: CMakeLists.txt  hashes.h  main.cpp  options.cpp  options.h
pass_gen/: pass_gen.py  pass_manger.py
scanner/: ipscan.py  portscan.py
simple_server/: tcpclient-incomplete.py  tcpserver.py
snake/: snake.py
weather_app/: app.py  index.html
